Issue #12546: Allow \x00 as a fill character for builtin type __format__ methods.